# MUEFS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  run_demo.py
backend/alembic/: env.py
backend/app/: config.py  database.py  logging_config.py  main.py  seed_data.py
backend/app/api/: admin.py  auth.py  cases.py  clerk_review.py  court_rules.py  courts.py  documents.py  favorites.py  filings.py  notifications.py  payments.py  router.py
backend/app/demo/: __init__.py  server.py  session_db.py
backend/app/integrations/: cms_adapter.py  jis_adapter.py  tyler_adapter.py
backend/app/middleware/: __init__.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  audit.py  case.py  court.py  filing.py  notification.py  payment.py  user.py
backend/app/schemas/: case.py  court.py  document.py  filing.py  payment.py  user.py
backend/app/services/: access_service.py  audit_service.py  document_service.py  filing_service.py  notification_service.py  payment_service.py  search_service.py  user_provision_service.py
backend/app/tasks/: __init__.py  document_tasks.py  notification_tasks.py
backend/app/utils/: http_context.py  keycloak_jwt.py  malware_scan.py  pdf.py  security.py
backend/tests/: conftest.py  test_access_service.py  test_audit_immutability.py  test_audit_request_id.py  test_config_safety.py  test_courts.py  test_demo_isolation.py  test_documents.py  test_filings.py  test_http_smoke.py  test_malware_scan.py  test_motions_and_search.py  test_payments.py  test_pdf_metadata.py  test_public_docket.py  test_readiness.py  test_security_headers.py  test_seed_integrity.py  test_user_provision.py
backend/tests/test_integrations/: test_cms_adapter.py
docs/: DEPLOYMENT.md  ROADMAP.md  STAKEHOLDER_DEMO.md  architecture.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: cases.ts  client.ts  courts.ts  documents.ts  favorites.ts  filings.ts  notifications.ts  payments.ts
frontend/src/components/auth/: LoginScreen.test.tsx  LoginScreen.tsx
frontend/src/components/clerk/: ReviewQueue.tsx
frontend/src/components/common/: ErrorBoundary.tsx  LoadError.tsx
frontend/src/components/filing/: CaseSelector.tsx  CaseTypeSelector.tsx  CourtSelector.tsx  DocumentUpload.tsx  FilingReview.tsx  FilingWizard.tsx  MyFilings.tsx  PaymentForm.tsx  ServiceList.tsx
frontend/src/components/layout/: ErrorBoundary.tsx  Footer.tsx  Header.tsx  NotFound.tsx  NotificationsBell.tsx  Sidebar.tsx
frontend/src/components/search/: CaseDetailPage.tsx  CaseSearch.tsx  Favorites.tsx
frontend/src/components/stats/: CoverageStats.tsx
frontend/src/config/: demoMode.ts
frontend/src/styles/: global.css
frontend/src/utils/: errors.ts  format.ts
