[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muefs-backend"
version = "0.1.0"
description = "Michigan Unified E-Filing System - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "aiosmtplib>=3.0.0",
    "python-magic>=0.4.27",
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "clamd>=1.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",  # async SQLite driver used by the demo and the test suite
]
# `dev` is an alias for `test` so both `pip install -e ".[test]"` (README) and
# `pip install -e ".[dev]"` (CI) pull the same tooling.
dev = ["muefs-backend[test]"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Seed data carries long legal descriptions and MCR rule URLs that don't wrap cleanly.
"app/seed_data.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_decorators = false
allow_subclassing_any = true
disable_error_code = ["type-arg", "no-any-return", "no-untyped-call", "attr-defined"]
